--- a/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
+++ b/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
@@ -8,6 +8,10 @@
   
         <!--Linea de tiempo-->
         <div class="container block pt-4 ps-5"> 
+          <!--Botón Agregar-->
+          <span class="edicion-icon d-flex justify-content-end">
+            <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkAgregar"><i class="bi bi-plus-circle-fill"></i></a>
+          </span>
           <ul class="timeline-with-icons">
   
             <!--Trabajo-->
@@ -15,8 +19,13 @@
               <span class="timeline-icon">
                 <i class="bi bi-briefcase-fill"></i>
               </span>
+              <!--Botones Editar y Eliminar-->
+              <span class="edicion-icon d-flex justify-content-end">
+                <a href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkEditar"><i class="bi bi-pen-fill"></i></a>
+                <a href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkEliminar"><i class="bi bi-trash3-fill"></i></a>
+              </span>
               <h5 class="timeline-title fw-bold">{{trabajo.titulo}}</h5>
-              <p class="timeline-date text-muted mb-2 fw-bold">{{trabajo.fecha}}</p>
+              <p class="timeline-date text-muted mb-2 fw-bold">{{trabajo.fechaInicio}} - {{trabajo.fechaFin}}</p>
               <p class="timeline-content text-muted"> 
                 {{trabajo.descripcion}}
               </p>
@@ -26,5 +35,133 @@
 
       </div> <!--Termina Fila-->
     </div> <!--Cierre Container-->
+
+
+    <!--MODAL AGREGAR-->
+    <div class="modal fade" id="ModalWorkAgregar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Nueva Experiencia Laboral
+            </h5>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+  
+              <!--Formulario-->
+              <form>
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre del puesto
+                  </label>
+                  <input type="text" class="form-control" id="titulo">                  
+                </div>
+  
+                <div class="row mb-3">
+                  <label for="inputDate" class="col-form-label">
+                    Fecha de inicio
+                  </label>
+                  <input type="text" class="form-control" id="fecha">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputDate" class="col-form-label">
+                    Fecha de fin
+                  </label>
+                  <input type="text" class="form-control" id="fecha">
+                </div>
+
+
+                <div class="row mb-3">
+                  <label for="inputDescription" class="col-form-label">
+                    Descripción del puesto
+                  </label>
+                  <textarea class="form-control" id="floatingTextarea2" style="height: 100px"></textarea>
+                </div>
+  
+                <div class="row mb-3">
+                  <div class="col-9 offset">
+                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
+                      Agregar
+                    </button> 
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                      Cancelar
+                    </button>                           
+                  </div>
+                </div>
+                
+              </form> <!--Cierre Formulario-->
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div> <!--Cierre Modal Agregar-->
+
+
+    <!--MODAL EDITAR-->
+    <div class="modal fade" id="ModalWorkEditar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Modificar Experiencia Laboral
+            </h5>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+  
+              <!--Formulario-->
+              <form>
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre del puesto
+                  </label>
+                  <input type="text" class="form-control" id="titulo">                  
+                </div>
+  
+                <div class="row mb-3">
+                  <label for="inputDate" class="col-form-label">
+                    Fecha de inicio
+                  </label>
+                  <input type="text" class="form-control" id="fecha">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputDate" class="col-form-label">
+                    Fecha de fin
+                  </label>
+                  <input type="text" class="form-control" id="fecha">
+                </div>
+
+
+                <div class="row mb-3">
+                  <label for="inputDescription" class="col-form-label">
+                    Descripción del puesto
+                  </label>
+                  <textarea class="form-control" id="floatingTextarea2" style="height: 100px"></textarea>
+                </div>
+  
+                <div class="row mb-3">
+                  <div class="col-9 offset">
+                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
+                      Modificar
+                    </button> 
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                      Cancelar
+                    </button>                           
+                  </div>
+                </div>
+                
+              </form> <!--Cierre Formulario-->
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div> <!--Cierre Modal Editar-->
   
   </section>
