--- a/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
+++ b/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
@@ -6,6 +6,11 @@
           <h2 class="section-title">Proyectos</h2>
         </div>
       </div>
+
+      <!--Botón Agregar-->
+      <span class="edicion-icon d-flex justify-content-end">
+        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ModalProyAgregar"><i class="bi bi-plus-circle-fill"></i></a>
+      </span>
   
       <!--Galeria Proyectos-->
         <div class="container text-center proyectos-contenedor">
@@ -14,14 +19,19 @@
         <!--Proyecto-->
             <div class="col-sm-12 col-md-6 col-lg-4" *ngFor="let proyecto of proyectosList">
               <div class="proyecto">
+                <!--Botones Editar y Eliminar-->
+                <span class="edicion-icon">
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#ModalProyEditar"><i class="bi bi-pen-fill"></i></a>
+                  <a href="#" data-bs-toggle="modal" data-bs-target="#ModalProyEliminar"><i class="bi bi-trash3-fill"></i></a>
+                </span>
                 <img [src]="proyecto.imgProy" alt="Proyecto">
                 <div class="overlay">
                   <p>{{proyecto.titulo}}</p>
                   <div class="iconos-contenedor">
-                    <a href="" target="_blank" rel="noopener noreferrer">
+                    <a href="{{proyecto.url_repositorio}}" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-link"></i>
                     </a>
-                    <a href="" target="_blank" rel="noopener noreferrer">
+                    <a href="{{proyecto.url_proyecto}}" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-zoom-in"></i>
                     </a>
                   </div>
@@ -34,4 +44,132 @@
         </div> <!--Cierre 2do Container-->
         
     </div> <!--Cierre 1er Container-->
+
+
+    <!--MODAL AGREGAR-->
+    <div class="modal fade" id="ModalProyAgregar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Nuevo Proyecto
+            </h5>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+  
+              <!--Formulario-->
+              <form>
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre del Proyecto
+                  </label>
+                  <input type="text" class="form-control" id="titulo">                  
+                </div>
+  
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url del repositorio
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url del sitio web
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url de la imagen del proyecto
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+  
+                <div class="row mb-3">
+                  <div class="col-9 offset">
+                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
+                      Agregar
+                    </button> 
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                      Cancelar
+                    </button>                           
+                  </div>
+                </div>
+                
+              </form> <!--Cierre Formulario-->
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div> <!--Cierre Modal Agregar-->
+
+
+    <!--MODAL EDITAR-->
+    <div class="modal fade" id="ModalProyEditar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">
+              Modificar Proyecto
+            </h5>
+          </div>
+          <div class="modal-body">
+            <div class="container-fluid">
+  
+              <!--Formulario-->
+              <form>
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre del Proyecto
+                  </label>
+                  <input type="text" class="form-control" id="titulo">                  
+                </div>
+  
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url del repositorio
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url del sitio web
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputUrl" class="col-form-label">
+                    Url de la imagen del proyecto
+                  </label>
+                  <input type="text" class="form-control" id="url">
+                </div>
+  
+                <div class="row mb-3">
+                  <div class="col-9 offset">
+                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
+                      Modificar
+                    </button> 
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+                      Cancelar
+                    </button>                           
+                  </div>
+                </div>
+                
+              </form> <!--Cierre Formulario-->
+  
+            </div>
+          </div>
+  
+        </div>
+      </div>
+    </div> <!--Cierre Modal Editar-->
+
+
   </section>
