--- a/PortfolioAngular/src/app/app.component.html
+++ b/PortfolioAngular/src/app/app.component.html
@@ -1,15 +1,5 @@
-<app-encabezado></app-encabezado>
-  
-<app-home></app-home>
-  
-<app-acerca-de></app-acerca-de>
-  
-<app-educacion></app-educacion>
-  
-<app-habilidades></app-habilidades>
-  
-<app-experiencia></app-experiencia>
-  
-<app-proyectos></app-proyectos>
-  
-<app-footer></app-footer>
+
+
+<div>
+    <router-outlet></router-outlet>
+</div>
