--- a/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
+++ b/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
@@ -18,22 +18,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a class="nav-link active fw-bold" aria-current="page" href="#home" style="color: #D47AE8;">Home</a>
+              <a (click)="toHome()" routerLinkActive="active" class="nav-link active fw-bold" aria-current="page" style="color: #D47AE8; cursor: pointer;">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link page-scroll" href="#about">Sobre mí</a>
+              <a (click)="toAbout()" routerLinkActive="active" class="nav-link page-scroll" style="cursor: pointer;">Sobre mí</a>
+            </li>
+            <li  class="nav-item">
+              <a (click)="toEducation()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Educación</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#education">Educación</a>
+              <a (click)="toSkills()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Habilidades</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Habilidades</a>
+              <a (click)="toExperience()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Experiencia</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#experience">Experiencia</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Proyectos</a>
+              <a (click)="toProjects()" routerLinkActive="active" class="nav-link" style="cursor: pointer;">Proyectos</a>
             </li>
           </ul>
           <hr class="text-black-50">
@@ -47,15 +47,12 @@
               <a class="nav-link" href={{miPortfolio.linkGithub}} target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
             </li>
             <li class="nav-item col-4 col-lg-auto">
-              <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ModalSignin"><i class="bi bi-person-circle"></i></a>          
+              <a class="nav-link" routerLink="/iniciar-sesion"><i class="bi bi-person-circle"></i></a>          
             </li>
           </ul> <!--Cierre Lista-->
         </div>
 
       </div> <!--Cierre container-->
     </nav>
-  
-    
-  
-  
+   
   </header>
