--- a/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
+++ b/PortfolioAngular/src/app/componentes/encabezado/encabezado.component.html
@@ -6,8 +6,8 @@
       <div class="container-fluid">
   
       <!--Logo Argentina Programa-->
-        <a class="navbar-brand" href={{miPortfolio.linkArgProg}} target="_blank" rel="noopener noreferrer">
-          <img class="logotipo" [src]="miPortfolio.imgLogo" alt="Logo Arg Prog">
+        <a class="navbar-brand" href="" target="_blank" rel="noopener noreferrer">
+          <img class="logotipo" src="/assets/img/Logo Arg Prog.png" alt="Logo Arg Prog">
         </a>
   
       <!--Categorias de Botones-->
@@ -15,7 +15,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse" id="navbarNav">
+        <div class="collapse navbar-collapse" id="navbarNav" *ngFor="let persona of personaList">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
               <a (click)="toHome()" routerLinkActive="active" class="nav-link active fw-bold" aria-current="page" style="color: #D47AE8; cursor: pointer;">Home</a>
@@ -41,10 +41,10 @@
         <!--Iconos Redes Sociales-->
           <ul class="navbar-nav flex-row flex-wrap text-center">
             <li class="nav-item col-4 col-lg-auto" id="iconos-barra">
-              <a class="nav-link" href={{miPortfolio.linkLinkedin}} target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+              <a class="nav-link" href={{persona.url_linkedin}} target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
             </li>
             <li class="nav-item col-4 col-lg-auto">
-              <a class="nav-link" href={{miPortfolio.linkGithub}} target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
+              <a class="nav-link" href={{persona.url_github}} target="_blank" rel="noopener noreferrer"><i class="bi bi-github"></i></a>
             </li>
             <li class="nav-item col-4 col-lg-auto">
               <a class="nav-link" routerLink="/iniciar-sesion"><i class="bi bi-person-circle"></i></a>          
