--- a/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
+++ b/PortfolioAngular/src/app/componentes/experiencia/experiencia.component.html
@@ -12,11 +12,12 @@
           <span class="edicion-icon d-flex justify-content-end">
             <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkAgregar"><i class="bi bi-plus-circle-fill"></i></a>
           </span>
+          
           <ul class="timeline-with-icons">
   
             <!--Trabajo-->
-            <li class="timeline-item mb-5" *ngFor="let trabajo of trabajosList">
-              <span class="timeline-icon">
+            <li class="timeline-item mb-5" *ngFor="let trabajo of trabajoList">
+              <span class="timeline-icon mt-4">
                 <i class="bi bi-briefcase-fill"></i>
               </span>
               <!--Botones Editar y Eliminar-->
@@ -24,11 +25,12 @@
                 <a href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkEditar"><i class="bi bi-pen-fill"></i></a>
                 <a href="#" data-bs-toggle="modal" data-bs-target="#ModalWorkEliminar"><i class="bi bi-trash3-fill"></i></a>
               </span>
-              <h5 class="timeline-title fw-bold">{{trabajo.titulo}}</h5>
-              <p class="timeline-date text-muted mb-2 fw-bold">{{trabajo.fechaInicio}} - {{trabajo.fechaFin}}</p>
+              <h5 class="timeline-title fw-bold">{{trabajo.nombre_puesto}}</h5>
+              <h6>{{trabajo.nombre_empresa}}</h6>
+              <p class="timeline-date text-muted mb-2 fw-bold">{{trabajo.fecha_inicio}} - {{trabajo.fecha_fin}}</p>
               <p class="timeline-content text-muted"> 
                 {{trabajo.descripcion}}
-              </p>
+              </p> 
             </li>             
           </ul> <!--Termina Linea de Tiempo-->
         </div>
@@ -55,7 +57,14 @@
                   <label for="inputTittle" class="col-form-label">
                     Nombre del puesto
                   </label>
-                  <input type="text" class="form-control" id="titulo">                  
+                  <input type="text" class="form-control" id="puesto">                  
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre de la empresa
+                  </label>
+                  <input type="text" class="form-control" id="empresa">                  
                 </div>
   
                 <div class="row mb-3">
@@ -119,7 +128,14 @@
                   <label for="inputTittle" class="col-form-label">
                     Nombre del puesto
                   </label>
-                  <input type="text" class="form-control" id="titulo">                  
+                  <input type="text" class="form-control" id="puesto">                  
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputTittle" class="col-form-label">
+                    Nombre de la empresa
+                  </label>
+                  <input type="text" class="form-control" id="empresa">                  
                 </div>
   
                 <div class="row mb-3">
