--- a/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
+++ b/PortfolioAngular/src/app/componentes/proyectos/proyectos.component.html
@@ -24,9 +24,9 @@
                   <a href="#" data-bs-toggle="modal" data-bs-target="#ModalProyEditar"><i class="bi bi-pen-fill"></i></a>
                   <a href="#" data-bs-toggle="modal" data-bs-target="#ModalProyEliminar"><i class="bi bi-trash3-fill"></i></a>
                 </span>
-                <img [src]="proyecto.imgProy" alt="Proyecto">
+                <img src="assets/img/Img Proyecto.jpg" alt="Proyecto">
                 <div class="overlay">
-                  <p>{{proyecto.titulo}}</p>
+                  <p>{{proyecto.nombre_proyecto}}</p>
                   <div class="iconos-contenedor">
                     <a href="{{proyecto.url_repositorio}}" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-link"></i>
