--- a/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
@@ -2,10 +2,9 @@
   <section id="about" class="about-section">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-7">
+        <div class="col-lg-7" *ngFor="let persona of personaList">
           <h2 class="section-title">Sobre <span>mí</span></h2>
-          <p>{{miPortfolio.presentacionInicio}}<strong>{{miPortfolio.nombreNegrita}}</strong></p>
-          <p>{{miPortfolio.presentacion}}<strong>{{miPortfolio.presentacionNegrita}}</strong></p>
+          <p>{{persona.sobre_mi}}</p>
         
           <!--Boton Contacto-->
           <a href="mailto:vanehuarte@gmail.com">
@@ -18,7 +17,7 @@
   
         <!--Imagen de Perfil-->
         <div class="col-lg-5 text-center">
-          <img class="imgperfil" [src]="miPortfolio.imgPerfil" alt="Foto de perfil">
+          <img class="imgperfil" src="/assets/img/Img Perfil.png" alt="Foto de perfil">
         </div>
 
       </div> <!--Termina Fila-->
