--- a/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
@@ -18,16 +18,17 @@
             <div class="card">
               <div class="card-body px-4 py-4">
                 <div class="d-flex justify-content-between">
-                  <h5 class="card-title fw-bold">{{curso.titulo}}</h5>
+                  <h5 class="card-title fw-bold">{{curso?.nombre_curso}}</h5>
                   <!--Botones Editar y Eliminar-->
                   <span class="edicion-icon">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#ModalEdEditar"><i class="bi bi-pen-fill"></i></a>
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#ModalEdEliminar"><i class="bi bi-trash3-fill"></i></a>
+                    <a  href="#" data-bs-toggle="modal" data-bs-target="#ModalEdEliminar"><i class="bi bi-trash3-fill"></i></a>
                   </span>
                 </div>
-                <p class="card-text text-muted fw-bold">{{curso.fechaInicio}} - {{curso.fechaFin}}</p>
-                <p class="card-text text-muted">{{curso.descripcion}}</p>
-                <a href="#" class="btn btn-primary">Sitio web</a>
+                <p class="card-text text-muted fw-bold">{{curso?.fecha_inicio}} - {{curso?.fecha_fin}}</p>
+                <p class="card-text text-muted">{{curso?.descripcion}}</p>
+                <p class="card-text text-muted">Lenguajes: {{curso?.lenguaje}}</p>
+                <a href={{curso?.url_curso}} target="_blank" class="btn btn-primary">Sitio web</a>
               </div>
             </div>      
           </div>
@@ -49,48 +50,55 @@
           <div class="modal-body">
             <div class="container-fluid">
   
-              <!--Formulario-->
-              <form>
+              <!--Formulario Agregar-->
+              <form (ngSubmit)="agregarCurso()" #formAgregar="ngForm">
                 <div class="row mb-3">
-                  <label for="inputTittle" class="col-form-label">
+                  <label for="nombre_curso" class="col-form-label">
                     Nombre del curso
                   </label>
-                  <input type="text" class="form-control" id="titulo">                  
+                  <input type="text" class="form-control" id="nombre_curso" name="nombre_curso" [(ngModel)]="cursoNuevo.nombre_curso">
                 </div>
   
                 <div class="row mb-3">
-                  <label for="inputDate" class="col-form-label">
+                  <label for="fecha_inicio" class="col-form-label">
                     Fecha de inicio
                   </label>
-                  <input type="text" class="form-control" id="fecha">
+                  <input type="text" class="form-control" id="fecha_inicio" name="fecha_inicio" [(ngModel)]="cursoNuevo.fecha_inicio">
                 </div>
 
                 <div class="row mb-3">
-                  <label for="inputDate" class="col-form-label">
+                  <label for="fecha_fin" class="col-form-label">
                     Fecha de fin
                   </label>
-                  <input type="text" class="form-control" id="fecha">
+                  <input type="text" class="form-control" id="fecha_fin" name="fecha_fin" [(ngModel)]="cursoNuevo.fecha_fin">
                 </div>
 
                 <div class="row mb-3">
-                  <label for="inputDescription" class="col-form-label">
+                  <label for="descripcion" class="col-form-label">
                     Descripción del curso
                   </label>
-                  <textarea class="form-control" id="floatingTextarea2" style="height: 100px"></textarea>
+                  <textarea class="form-control" id="descripcion" style="height: 100px" name="descripcion" [(ngModel)]="cursoNuevo.descripcion"></textarea>
                 </div>
 
                 <div class="row mb-3">
-                  <label for="inputUrl" class="col-form-label">
+                  <label for="lenguaje" class="col-form-label">
+                    Lenguajes
+                  </label>
+                  <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoNuevo.lenguaje"></textarea>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="url_curso" class="col-form-label">
                     Url del sitio web
                   </label>
-                  <input type="text" class="form-control" id="url">
+                  <input type="text" class="form-control" id="url" name="url_curso" [(ngModel)]="cursoNuevo.url_curso">
                 </div>
   
                 <div class="row mb-3">
                   <div class="col-9 offset">
-                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
+                    <button  type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button" >
                       Agregar
-                    </button> 
+                    </button>  
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
                       Cancelar
                     </button>                           
@@ -147,6 +155,13 @@
                     Descripción del curso
                   </label>
                   <textarea class="form-control" id="floatingTextarea2" style="height: 100px"></textarea>
+                </div>
+
+                <div class="row mb-3">
+                  <label for="inputDescription" class="col-form-label">
+                    Lenguajes
+                  </label>
+                  <textarea class="form-control" id="floatingTextarea2" style="height: 60px"></textarea>
                 </div>
 
                 <div class="row mb-3">
