--- a/PortfolioAngular/src/app/componentes/home/home.component.html
+++ b/PortfolioAngular/src/app/componentes/home/home.component.html
@@ -3,10 +3,10 @@
 
     <div class="container text-center">
       <div class="row">
-        <div class="col-md-12">
-          <h1>{{miPortfolio.nombre}}</h1>
-          <span><i class="bi bi-code"></i><span class="tw"></span><i class="bi bi-code-slash"></i></span>
+        <div class="col-md-12" *ngFor="let persona of personaList">
+          <h1>{{persona.nombre}} {{persona.apellido}}</h1>          
         </div>
+        <span><i class="bi bi-code"></i><span class="tw"></span><i class="bi bi-code-slash"></i></span>
 
       </div> <!--Termina Fila--> 
     </div> <!--Cierre Container-->
