--- a/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
+++ b/PortfolioAngular/src/app/componentes/educacion/educacion.component.html
@@ -9,21 +9,23 @@
 
       <!--Botón Agregar-->
       <span class="edicion-icon d-flex justify-content-end">
-        <a href="#" data-bs-toggle="modal" data-bs-target="#ModalEdAgregar"><i class="bi bi-plus-circle-fill"></i></a>
+        <a href="#" routerLink="/agregar-educacion"><i class="bi bi-plus-circle-fill"></i></a>
       </span>
   
         <!--Curso-->
         <div class="row justify-content-around">
-          <div class="col-sm-12 col-md-6 mb-3" *ngFor="let curso of cursosList">
+          <div class="card-group col-sm-12 col-md-6 mb-3" *ngFor="let curso of cursosList">
             <div class="card">
               <div class="card-body px-4 py-4">
                 <div class="d-flex justify-content-between">
-                  <h5 class="card-title fw-bold">{{curso?.nombre_curso}}</h5>
+                  <h5 class="card-title fw-bold">{{curso?.nombre_curso}}</h5>                  
+                  
                   <!--Botones Editar y Eliminar-->
                   <span class="edicion-icon">
-                    <a href="#" data-bs-toggle="modal" data-bs-target="#ModalEdEditar"><i class="bi bi-pen-fill"></i></a>
-                    <a  href="#" data-bs-toggle="modal" data-bs-target="#ModalEdEliminar"><i class="bi bi-trash3-fill"></i></a>
+                    <a href="#" routerLink="/editar-educacion/{{curso.id}}"><i class="bi bi-pen-fill"></i></a>
+                    <a (click)="borrarCurso(curso.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
                   </span>
+
                 </div>
                 <p class="card-text text-muted fw-bold">{{curso?.fecha_inicio}} - {{curso?.fecha_fin}}</p>
                 <p class="card-text text-muted">{{curso?.descripcion}}</p>
@@ -36,159 +38,5 @@
         </div> <!--Termina Fila--> 
       
     </div> <!--Cierre Container-->
-
-
-    <!--MODAL AGREGAR-->
-    <div class="modal fade" id="ModalEdAgregar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Nuevo Curso
-            </h5>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-  
-              <!--Formulario Agregar-->
-              <form (ngSubmit)="agregarCurso()" #formAgregar="ngForm">
-                <div class="row mb-3">
-                  <label for="nombre_curso" class="col-form-label">
-                    Nombre del curso
-                  </label>
-                  <input type="text" class="form-control" id="nombre_curso" name="nombre_curso" [(ngModel)]="cursoNuevo.nombre_curso">
-                </div>
-  
-                <div class="row mb-3">
-                  <label for="fecha_inicio" class="col-form-label">
-                    Fecha de inicio
-                  </label>
-                  <input type="text" class="form-control" id="fecha_inicio" name="fecha_inicio" [(ngModel)]="cursoNuevo.fecha_inicio">
-                </div>
-
-                <div class="row mb-3">
-                  <label for="fecha_fin" class="col-form-label">
-                    Fecha de fin
-                  </label>
-                  <input type="text" class="form-control" id="fecha_fin" name="fecha_fin" [(ngModel)]="cursoNuevo.fecha_fin">
-                </div>
-
-                <div class="row mb-3">
-                  <label for="descripcion" class="col-form-label">
-                    Descripción del curso
-                  </label>
-                  <textarea class="form-control" id="descripcion" style="height: 100px" name="descripcion" [(ngModel)]="cursoNuevo.descripcion"></textarea>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="lenguaje" class="col-form-label">
-                    Lenguajes
-                  </label>
-                  <textarea class="form-control" id="lenguaje" style="height: 60px" name="lenguaje" [(ngModel)]="cursoNuevo.lenguaje"></textarea>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="url_curso" class="col-form-label">
-                    Url del sitio web
-                  </label>
-                  <input type="text" class="form-control" id="url" name="url_curso" [(ngModel)]="cursoNuevo.url_curso">
-                </div>
-  
-                <div class="row mb-3">
-                  <div class="col-9 offset">
-                    <button  type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button" >
-                      Agregar
-                    </button>  
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                      Cancelar
-                    </button>                           
-                  </div>
-                </div>
-                
-              </form> <!--Cierre Formulario-->
-  
-            </div>
-          </div>
-  
-        </div>
-      </div>
-    </div> <!--Cierre Modal Agregar-->
-
-
-    <!--MODAL EDITAR-->
-    <div class="modal fade" id="ModalEdEditar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Modificar Curso
-            </h5>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-  
-              <!--Formulario-->
-              <form>
-                <div class="row mb-3">
-                  <label for="inputTittle" class="col-form-label">
-                    Nombre del curso
-                  </label>
-                  <input type="text" class="form-control" id="titulo">                  
-                </div>
-  
-                <div class="row mb-3">
-                  <label for="inputDate" class="col-form-label">
-                    Fecha de inicio
-                  </label>
-                  <input type="text" class="form-control" id="fecha">
-                </div>
-
-                <div class="row mb-3">
-                  <label for="inputDate" class="col-form-label">
-                    Fecha de fin
-                  </label>
-                  <input type="text" class="form-control" id="fecha">
-                </div>
-
-                <div class="row mb-3">
-                  <label for="inputDescription" class="col-form-label">
-                    Descripción del curso
-                  </label>
-                  <textarea class="form-control" id="floatingTextarea2" style="height: 100px"></textarea>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="inputDescription" class="col-form-label">
-                    Lenguajes
-                  </label>
-                  <textarea class="form-control" id="floatingTextarea2" style="height: 60px"></textarea>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="inputUrl" class="col-form-label">
-                    Url del sitio web
-                  </label>
-                  <input type="text" class="form-control" id="url">
-                </div>
-  
-                <div class="row mb-3">
-                  <div class="col-9 offset">
-                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
-                      Modificar
-                    </button> 
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                      Cancelar
-                    </button>                           
-                  </div>
-                </div>
-                
-              </form> <!--Cierre Formulario-->
-  
-            </div>
-          </div>
-  
-        </div>
-      </div>
-    </div> <!--Cierre Modal Editar-->    
 
   </section>
