--- a/PortfolioAngular/src/app/componentes/home/home.component.html
+++ b/PortfolioAngular/src/app/componentes/home/home.component.html
@@ -3,8 +3,8 @@
 
     <div class="container text-center">
       <div class="row">
-        <div class="col-md-12" *ngFor="let persona of personaList">
-          <h1>{{persona.nombre}} {{persona.apellido}}</h1>          
+        <div class="col-md-12" *ngFor="let persona of personasList">
+          <h1>{{persona?.nombre}} {{persona?.apellido}}</h1>          
         </div>
         <span><i class="bi bi-code"></i><span class="tw"></span><i class="bi bi-code-slash"></i></span>
 
