--- a/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/PortfolioAngular/src/app/componentes/acerca-de/acerca-de.component.html
@@ -2,9 +2,9 @@
   <section id="about" class="about-section">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-7" *ngFor="let persona of personaList">
+        <div class="col-lg-7" *ngFor="let persona of personasList">
           <h2 class="section-title">Sobre <span>mí</span></h2>
-          <p>{{persona.sobre_mi}}</p>
+          <p>{{persona?.sobre_mi}}</p>
         
           <!--Boton Contacto-->
           <a href="mailto:vanehuarte@gmail.com">
