--- a/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
+++ b/PortfolioAngular/src/app/componentes/habilidades/habilidades.component.html
@@ -12,30 +12,30 @@
 
       <!--Botón Agregar-->
       <span class="edicion-icon d-flex justify-content-end">
-        <a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#ModalSkillAgregar"><i class="bi bi-plus-circle-fill"></i></a>
+        <a class="nav-link" href="#" routerLink="/agregar-habilidad"><i class="bi bi-plus-circle-fill"></i></a>
       </span>
 
 
       <!--CARD SKILL-->
       <div class="row justify-content-around">
-        <div class="col-sm-12 col-md-6 mb-3" *ngFor="let skill of skillList" >
+        <div class="col-sm-12 col-md-6 mb-3" *ngFor="let skill of skillsList" >
           <div class="card mb-0 border-0 shadow-none">
             
               <div class="skill-box col-12" >
                 <div class="skill-title d-flex justify-content-between align-items-center">
-                  <p>{{skill.nombre_habilidad}}</p>
-                  <p>{{skill.porcentaje}}</p>
+                  <p>{{skill?.nombre_habilidad}}</p>
+                  <p>{{skill?.porcentaje}}</p>
                 </div>
     
                 <div class="progress">
-                  <div class="progress-bar" style="background-color: #D47AE8; width: {{skill.porcentaje}}">
+                  <div class="progress-bar" style="background-color: #D47AE8; width: {{skill?.porcentaje}}">
                   </div>
                 </div>
   
                 <!--Botones Editar y Eliminar-->
                 <span class="edicion-icon d-flex justify-content-end mt-1">
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#ModalSkillEditar"><i class="bi bi-pen-fill"></i></a>
-                  <a href="#" data-bs-toggle="modal" data-bs-target="#ModalSkillEliminar"><i class="bi bi-trash3-fill"></i></a>
+                  <a href="#" routerLink="/editar-habilidad/{{skill.id}}"><i class="bi bi-pen-fill"></i></a>
+                  <a (click)="borrarHabilidad(skill.id)" href="#"><i class="bi bi-trash3-fill"></i></a>
                 </span>             
               
             </div>
@@ -46,103 +46,5 @@
         
         
     </div> <!--Cierre Container-->
-
-
-    <!--MODAL AGREGAR-->
-    <div class="modal fade" id="ModalSkillAgregar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Nueva Habilidad
-            </h5>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-  
-              <!--Formulario-->
-              <form (ngSubmit)="agregarHabilidad()" #formAgregar="ngForm">
-                <div class="row mb-3">
-                  <label for="nombre_habilidad" class="col-form-label">
-                    Nombre de la Habilidad
-                  </label>
-                  <input type="text" class="form-control" id="nombre_habilidad" name="nombre_habilidad" [(ngModel)]="skillNueva.nombre_habilidad">                  
-                </div>
-  
-                <div class="row mb-3">
-                  <label for="porcentaje" class="col-form-label">
-                    Porcentaje
-                  </label>
-                  <input type="text" class="form-control" id="porcentaje" name="porcentaje" [(ngModel)]="skillNueva.porcentaje">
-                </div>
-
-                <div class="row mb-3">
-                  <div class="col-9 offset">
-                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
-                      Agregar
-                    </button> 
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                      Cancelar
-                    </button>                           
-                  </div>
-                </div>
-                
-              </form> <!--Cierre Formulario-->
-  
-            </div>
-          </div>
-  
-        </div>
-      </div>
-    </div> <!--Cierre Modal Agregar-->
-
-
-    <!--MODAL EDITAR-->
-    <div class="modal fade" id="ModalSkillEditar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">
-              Modificar Habilidad
-            </h5>
-          </div>
-          <div class="modal-body">
-            <div class="container-fluid">
-  
-              <!--Formulario-->
-              <form>
-                <div class="row mb-3">
-                  <label for="inputTittle" class="col-form-label">
-                    Nombre de la Habilidad
-                  </label>
-                  <input type="text" class="form-control" id="titulo">                  
-                </div>
-  
-                <div class="row mb-3">
-                  <label for="inputDate" class="col-form-label">
-                    Porcentaje
-                  </label>
-                  <input type="text" class="form-control" id="porcentaje">
-                </div>
-
-                <div class="row mb-3">
-                  <div class="col-9 offset">
-                    <button type="submit" class="btn btn-dark me-2" style="border-color: #D47AE8; background-color: #D47AE8;" name="button">
-                      Modificar
-                    </button> 
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
-                      Cancelar
-                    </button>                           
-                  </div>
-                </div>
-                
-              </form> <!--Cierre Formulario-->
-  
-            </div>
-          </div>
-  
-        </div>
-      </div>
-    </div> <!--Cierre Modal Editar-->
 
   </section>
